# VAIC2026

./: .env.sample  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  README.md  RESULTS.md  TASKS.csv  TEAM_SETUP.md  VERIFICATION.md  docker-compose.yaml
finetune/: EXPERIMENT_MULTIPROVINCE.md  EXPERIMENT_RETRIEVER.md  README.md  logs_kernel_v13.txt  logs_kernel_v14_e5.txt  logs_kernel_v15_e5_conservative.txt  pyproject.toml  sources.txt  sources_provinces.txt
finetune/data/: chunks.jsonl  eval_dienbien_v2.jsonl  eval_indomain.jsonl  qa.jsonl  qa_candidates.txt  train_dienbien_v2.jsonl  train_indomain.jsonl  train_multiprovince.jsonl  train_multiprovince_v3.jsonl
finetune/kaggle_kernel/: kaggle_reranker.ipynb  kernel-metadata.json
finetune/notebooks/: KAGGLE.md  eval_reranker.py  kaggle_reranker.ipynb  train_reranker.py  train_retriever.py
finetune/scripts/: build_chunks.py  crawl_congbao.py  dump_docs.py  dump_unused.py  harvest_sonla.py  mine_negatives.py  sample_candidates.py  scrape_docs.py
rag-pipeline/: README.md  chunk.py  config.py  db.py  embed.py  ingest.py  parse.py  pyproject.toml  storage.py
rag-pipeline/helpers/: text_split.py
rag-pipeline/tests/: fakes.py  test_chunk.py  test_embed.py  test_ingest.py  test_ingest_callback.py  test_parse.py  test_section.py  test_storage.py
retrieval-api/: README.md  pyproject.toml
retrieval-api/app/: config.py  deps.py  main.py  models.py
retrieval-api/scripts/: test_reranker_serving.py
retrieval-api/tests/: test_chat_api.py  test_chat_service.py  test_deps_pool.py  test_documents_api.py  test_documents_service.py  test_embedding.py  test_hybrid.py  test_ingest_api.py  test_ingest_auth.py  test_ingest_trigger.py  test_prep_packs_api.py  test_prep_packs_service.py  test_reformulation.py  (+8 more)
(+135 files in other folders)
