[project]
name = "vaic-finetune"
version = "0.1.0"
description = "Data prep + reranker fine-tune for VAIC2026 Paperless Meetings"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "pdfplumber>=0.11",       # PDF -> text + page numbers, no poppler needed
    "beautifulsoup4>=4.12",   # scrape HTML legal pages
    "rank-bm25>=0.2.2",       # hard-negative mining
    "tqdm>=4.66",
    "python-docx>=1.1",       # .docx fallback
]

[tool.uv]
dev-dependencies = []
