[project]
name = "retrieval-api"
version = "0.1.0"
description = "Paperless Meetings retrieval API: documents plain-fetch + vector search (Q&A)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.7.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.86.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: needs a live Postgres (DATABASE_URL)",
]
